// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`update > update 1`] = `
"UPDATE user SET
level=1
WHERE id IS NULL"
`;

exports[`updateFrom > update-base 1`] = `
"UPDATE user SET
id= 78
WHERE id IS NULL"
`;

exports[`updateFrom > update-returning 1`] = `
"UPDATE user SET
id= 78
RETURNING rename AS level,name"
`;
